changes to index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Chad Crowell Porject Site</h1>
+						<h1>Chad Crowell </br>Project Site</h1>
 						<p>See what project's I'm working on currently...</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
