changes to index.html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Notebook App</a></li>
-							<li><a href="generic.html">Clock App</a></li>
-							<li><a href="elements.html">List App</a></li>
+							<li><a href="clockapp.html">Clock App</a></li>
+							<li><a href="listapp.html">List App</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/chadmcrowell" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
