changes to index.html

--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(512) 593-1882</a></p>
+								<p><a href="tel:5125931882">(512) 593-1882</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">hello@websitelp.com</a></p>
+								<p><a href="mailto:hello@websitelp.com">hello@websitelp.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
