--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 					<footer id="footer">
 						<section>
 							<form action="POST" data-netlify="true">
+								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -165,10 +166,10 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/chadmcrowell" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://facebook.com/chadmcrowell" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://instagram.com/chadmcrowell.com" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/chadmcrowell" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
