changed form on index.html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<footer id="footer">
 						<section>
 							<form action="POST" data-netlify="true">
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<p>Please join my email list and i'll update you on project status. I take your privacy very seriously, I will never spam you or give away your email address</p>
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -136,10 +136,6 @@
 										<label for="email">Email</label>
 										<input type="text" name="email" id="email" />
 									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-                                    </div>
                                     <div class="field">
                                         <div data-netlify-recaptcha="true"></div>
                                     </div>
