changed form on index.html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<footer id="footer">
 						<section>
 							<form action="POST" data-netlify="true">
-								<p>Please join my email list and i'll update you on project status. I take your privacy very seriously, I will never spam you or give away your email address</p>
+								<p>Sign up to receive updates on these projects. I take your privacy very seriously, I will never spam you or give away your email address</p>
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
