fixed insta link

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								<ul class="icons alt">
 									<li><a href="https://twitter.com/chadmcrowell" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://facebook.com/chadmcrowell" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://instagram.com/chadmcrowell.com" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://instagram.com/chadmcrowell" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/chadmcrowell" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
