--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">PROJECTS</a>
+						<a href="index.html" class="logo">HOME</a>
 					</header>
 
 				<!-- Nav -->
