--- a/clockapp.html
+++ b/clockapp.html
@@ -34,8 +34,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Notebook App</a></li>
-							<li><a href="clockapp.html">Clock App</a></li>
+							<li><a href="index.html">Notebook App</a></li>
+							<li class="active"><a href="clockapp.html">Clock App</a></li>
 							<li><a href="listapp.html">List App</a></li>
 						</ul>
 						<ul class="icons">
@@ -53,8 +53,8 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">March 25, 2020</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
+									<h2><a href="#">Clock App<br />
+									Headline</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
